adding fade effect and speed 400 ms

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,7 +8,7 @@
 
 <ion-content>
 
-    <ion-slides *ngIf="onBoardingSlides" pager="true" paginationType="bullets" style="font-family: 'Roboto Condensed', sans-serif;" #slides>
+    <ion-slides *ngIf="onBoardingSlides" effect="fade" speed="400" pager="true" paginationType="bullets" style="font-family: 'Roboto Condensed', sans-serif;" #slides>
         <!-- <ion-slide class="custom-slide" style="background-color:red; color:white;">
             <img src='https://via.placeholder.com/200' style="width: 100px; height: 100px;" />
             <h1>Welcome my friend!</h1>
