make the font for android is diffrent using content-md for slides page

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,9 +6,9 @@
   </ion-navbar> 
 </ion-header>-->
 
-<ion-content no-bounce class="page-home">
+<ion-content no-bounce>
     <!-- <div ion-fixed> -->
-    <ion-slides *ngIf="onBoardingSlides" (ionSlideDidChange)="slideChanged()" effect="fade" speed="400" pager="true" paginationType="bullets" style="font-family: 'Roboto Condensed', sans-serif;" #slides>
+    <ion-slides *ngIf="onBoardingSlides" (ionSlideDidChange)="slideChanged()" effect="fade" speed="400" pager="true" paginationType="bullets" #slides>
         <!-- <ion-slide class="custom-slide" style="background-color:red; color:white;">
             <img src='https://via.placeholder.com/200' style="width: 100px; height: 100px;" />
             <h1>Welcome my friend!</h1>
@@ -23,7 +23,7 @@
         </ion-slide> -->
 
         <ion-slide *ngFor="let onBoardingSlide of onBoardingSlides" class="slides-container" [ngStyle]="{'background-color': '#'+onBoardingSlide.backgroundColor,'color':'#'+onBoardingSlide.contentColor}">
-            <ion-toolbar *ngIf="hasAction(onBoardingSlide.identifier)">
+            <ion-toolbar [hidden]="!hasAction(onBoardingSlide.identifier)">
                 <ion-buttons center>
                     <button (click)="openActionUrl(onBoardingSlide.identifier)" ion-button style="color:inherit">Action</button>
                 </ion-buttons>
@@ -43,7 +43,7 @@
 
     </ion-slides>
 
-    <button *ngIf="onBoardingSlides" [hidden]="isHidePrevButton" type="submit" ion-button icon-only class="swiper-button-prev" (click)="prevSlide()"> <ion-icon color="light"  name="md-arrow-dropleft"></ion-icon></button>
+    <button *ngIf="onBoardingSlides" [hidden]="isHidePrevButton" type="submit" ion-button icon-only class="swiper-button-prev" (click)="prevSlide()"> <ion-icon color="#f0f0f0"  name="md-arrow-dropleft"></ion-icon></button>
     <button *ngIf="onBoardingSlides" type="submit" ion-button icon-only class="swiper-button-next" (click)="nextSlide()"><ion-icon color="light" name="md-arrow-dropright"></ion-icon></button>
     <div [hidden]="onBoardingSlides || errMsg">
         <ion-spinner></ion-spinner>
