--- a/src/pages/welcomescreen/welcomescreen.html
+++ b/src/pages/welcomescreen/welcomescreen.html
@@ -14,5 +14,8 @@
 
 
 <ion-content padding>
-
+    <div class="centered-div">
+        <h2>Congrats</h2>
+        <h3>You have completed the coding Challenge</h3>
+    </div>
 </ion-content>
