--- a/src/pages/welcomescreen/welcomescreen.html
+++ b/src/pages/welcomescreen/welcomescreen.html
@@ -15,7 +15,7 @@
 
 <ion-content padding>
     <div class="centered-div">
-        <h2>Congrats</h2>
-        <h3>You have completed the coding Challenge</h3>
+        <h1 class="slide-title">Congrats</h1>
+        <h2 class="slide-subtitle">You have completed the coding Challenge</h2>
     </div>
 </ion-content>
